// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flexAlign renders 0 1`] = `
Array [
  .c0 {
  -webkit-flex-align: 0;
  -ms-flex-align: 0;
  flex-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: 0;
  -ms-flex-align: 0;
  flex-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: 0;
  -ms-flex-align: 0;
  flex-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: 0;
  -ms-flex-align: 0;
  flex-align: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`flexAlign renders function 1`] = `
Array [
  .c0 {
  -webkit-flex-align: hasnot;
  -ms-flex-align: hasnot;
  flex-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: has;
  -ms-flex-align: has;
  flex-align: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: hasnot;
  -ms-flex-align: hasnot;
  flex-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: has;
  -ms-flex-align: has;
  flex-align: has;
}

<div
    className="c0"
  />,
]
`;

exports[`flexAlign renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-flex-align: invalid.path.1;
  -ms-flex-align: invalid.path.1;
  flex-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: invalid.path.1;
  -ms-flex-align: invalid.path.1;
  flex-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: invalid.path.1;
  -ms-flex-align: invalid.path.1;
  flex-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: invalid.path.1;
  -ms-flex-align: invalid.path.1;
  flex-align: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`flexAlign renders negative number 1`] = `
Array [
  .c0 {
  -webkit-flex-align: -54881;
  -ms-flex-align: -54881;
  flex-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: -54881;
  -ms-flex-align: -54881;
  flex-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: -42365;
  -ms-flex-align: -42365;
  flex-align: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: -42365;
  -ms-flex-align: -42365;
  flex-align: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`flexAlign renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: July;
    -ms-flex-align: July;
    flex-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: August;
    -ms-flex-align: August;
    flex-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: September;
    -ms-flex-align: September;
    flex-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-align: November;
    -ms-flex-align: November;
    flex-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: July;
    -ms-flex-align: July;
    flex-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: August;
    -ms-flex-align: August;
    flex-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: September;
    -ms-flex-align: September;
    flex-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-align: November;
    -ms-flex-align: November;
    flex-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: May;
    -ms-flex-align: May;
    flex-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: June;
    -ms-flex-align: June;
    flex-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: April;
    -ms-flex-align: April;
    flex-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-align: November;
    -ms-flex-align: November;
    flex-align: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: May;
    -ms-flex-align: May;
    flex-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: June;
    -ms-flex-align: June;
    flex-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-align: April;
    -ms-flex-align: April;
    flex-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-align: November;
    -ms-flex-align: November;
    flex-align: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flexAlign renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-flex-align: July;
    -ms-flex-align: July;
    flex-align: July;
  }
}

@media April {
  .c0 {
    -webkit-flex-align: August;
    -ms-flex-align: August;
    flex-align: August;
  }
}

@media January {
  .c0 {
    -webkit-flex-align: September;
    -ms-flex-align: September;
    flex-align: September;
  }
}

@media April {
  .c0 {
    -webkit-flex-align: November;
    -ms-flex-align: November;
    flex-align: November;
  }
}

@media June {
  .c0 {
    -webkit-flex-align: August;
    -ms-flex-align: August;
    flex-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-flex-align: July;
    -ms-flex-align: July;
    flex-align: July;
  }
}

@media April {
  .c0 {
    -webkit-flex-align: August;
    -ms-flex-align: August;
    flex-align: August;
  }
}

@media January {
  .c0 {
    -webkit-flex-align: September;
    -ms-flex-align: September;
    flex-align: September;
  }
}

@media April {
  .c0 {
    -webkit-flex-align: November;
    -ms-flex-align: November;
    flex-align: November;
  }
}

@media June {
  .c0 {
    -webkit-flex-align: August;
    -ms-flex-align: August;
    flex-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex-align: January;
    -ms-flex-align: January;
    flex-align: January;
  }
}

@media April {
  .c0 {
    -webkit-flex-align: December;
    -ms-flex-align: December;
    flex-align: December;
  }
}

@media January {
  .c0 {
    -webkit-flex-align: April;
    -ms-flex-align: April;
    flex-align: April;
  }
}

@media April {
  .c0 {
    -webkit-flex-align: May;
    -ms-flex-align: May;
    flex-align: May;
  }
}

@media June {
  .c0 {
    -webkit-flex-align: June;
    -ms-flex-align: June;
    flex-align: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex-align: January;
    -ms-flex-align: January;
    flex-align: January;
  }
}

@media April {
  .c0 {
    -webkit-flex-align: December;
    -ms-flex-align: December;
    flex-align: December;
  }
}

@media January {
  .c0 {
    -webkit-flex-align: April;
    -ms-flex-align: April;
    flex-align: April;
  }
}

@media April {
  .c0 {
    -webkit-flex-align: May;
    -ms-flex-align: May;
    flex-align: May;
  }
}

@media June {
  .c0 {
    -webkit-flex-align: June;
    -ms-flex-align: June;
    flex-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flexAlign renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-flex-align: 54881;
  -ms-flex-align: 54881;
  flex-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: 54881;
  -ms-flex-align: 54881;
  flex-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: 42365;
  -ms-flex-align: 42365;
  flex-align: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: 42365;
  -ms-flex-align: 42365;
  flex-align: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`flexAlign renders string 1`] = `
Array [
  .c0 {
  -webkit-flex-align: July;
  -ms-flex-align: July;
  flex-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: July;
  -ms-flex-align: July;
  flex-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: June;
  -ms-flex-align: June;
  flex-align: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: June;
  -ms-flex-align: June;
  flex-align: June;
}

<div
    className="c0"
  />,
]
`;

exports[`flexAlign renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-flex-align: DarkSlateBlue;
  -ms-flex-align: DarkSlateBlue;
  flex-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: DarkSlateBlue;
  -ms-flex-align: DarkSlateBlue;
  flex-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: DarkSlateBlue;
  -ms-flex-align: DarkSlateBlue;
  flex-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-align: DarkSlateBlue;
  -ms-flex-align: DarkSlateBlue;
  flex-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
